# swmmanywhere-us

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
docs/: example.py  swmm_results.py
src/swmmanywhere_us/: __init__.py  filepaths.py  geopackage.py  geospatial_utilities.py  graph_utilities.py  logging.py  nlcd.py  parameters.py  pipeline.py  post_processing.py  prepare_data.py  preprocessing.py  shortest_path_utils.py  storms.py  swmm_defaults.py  swmm_inp_generator.py  swmm_run.py  swmmanywhere.py  utilities.py
src/swmmanywhere_us/graph_functions/: __init__.py  connectivity.py  design.py  dual_drainage.py  network_cleaning.py  outfall.py  simplification.py  street.py  subcatchment.py  topology.py  water_bodies.py
swmm-solver/: build.bat  build.sh  pixi.toml  recipe.yaml
tests/: test_geospatial_signatures.py  test_geospatial_wbw.py  test_graphfcns.py  test_outfall.py  test_parameters.py  test_post_processing.py  test_shortest_path.py  test_storms.py
