[build-system]
build-backend = "hatchling.build"
requires = [
  "hatch-vcs",
  "hatchling",
]

[project]
name = "swmmanywhere-us"
description = "Synthesise Urban Drainage Network Models Anywhere in the US"
readme = "README.md"
authors = [ { name = "Taher Chegini", email = "cheginit@gmail.com" } ]
requires-python = ">=3.11"
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: BSD License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: GIS",
  "Typing :: Typed",
]
dynamic = [
  "version",
]
dependencies = [
  "cytoolz",
  "geopandas>=1",
  "networkx>=3",
  "numpy>=2",
  "orjson",
  "pandas",
  "pyarrow",
  "pydantic",
  "pyproj",
  "pywbt>=0.2.2",
  "pyyaml",
  "rasterio",
  "rich",
  "rioxarray",
  "scipy",
  "seamless-3dep",
  "shapely>=2",
  "tiny-osm",
  "tiny-retriever",
  "xarray",
]
optional-dependencies.dev = [
  "folium",
  "git-cliff",
  "ipykernel",
  "ipywidgets",
  "jupytext",
  "mapclassify",
  "matplotlib",
  "nbstripout>=0.8.1",
  "notebook",
  "pandas-stubs",
  "pytest",
  "scipy-stubs",
  "types-geopandas",
  "types-networkx",
  "types-pyyaml",
  "types-shapely",
]
optional-dependencies.lint = [
  "codespell",
  "pre-commit",
]
optional-dependencies.swmm = [
  "geopandas",
  "ipykernel",
  "ipywidgets",
  "mapclassify",
  "matplotlib",
  "networkx",
  "orjson",
  # "pyswmm",
  # "swmm-toolkit<0.16.1",
]
optional-dependencies.test = [
  "coverage[toml]",
  "pytest-cov",
  "pytest-sugar",
]
optional-dependencies.typecheck = [
  "pandas-stubs",
  "pyright",
  "scipy-stubs",
  "types-geopandas",
  "types-networkx",
  "types-pyyaml",
  "types-shapely",
]

[tool.hatch]
version.source = "vcs"
metadata.license = "BSD-3-clause"
metadata.license-files = [ "LICENSE" ]
build.targets.wheel.packages = [
  "src/swmmanywhere_us",
]
build.targets.sdist.exclude = [
  "*.zip",
]

[tool.pixi.environments]
test311 = { features = [ "test", "py311" ] }
test314 = { features = [ "test", "py314" ] }
dev = { features = [ "dev", "py314" ] }
swmm = { features = [ "swmm", "py313" ] }
typecheck = { features = [ "typecheck", "py314" ] }
lint = { features = [ "lint", "py314" ], no-default-feature = true }

[tool.pixi.feature.dev.tasks]
report = { cmd = [ "coverage", "report" ], depends-on = [ "test" ] }
html = { cmd = [ "coverage", "html" ], depends-on = [ "report" ] }

[tool.pixi.feature.lint.tasks]
lint = "pre-commit run --all-files"
pcupdate = "pre-commit autoupdate"
spell = "codespell -w"

[tool.pixi.feature.py311.dependencies]
python = "~=3.11.0"
libgdal-core = "*"
hdf5 = "*"
libnetcdf = "*"

[tool.pixi.feature.py313.dependencies]
python = "~=3.13.0"
libgdal-core = "*"
hdf5 = "*"
libnetcdf = "*"

# swmm-toolkit = "*"
[tool.pixi.feature.py314.dependencies]
python = "~=3.14.0"
libgdal-core = "*"
hdf5 = "*"
libnetcdf = "*"

[tool.pixi.feature.swmm.dependencies]
pyswmm = "*"

[tool.pixi.feature.test.tasks]
test = { cmd = [
  "pytest",
  "--cov",
  "--cov-append",
  "--cov-branch",
  "--cov-report=xml",
  "--junitxml=junit.xml",
  "--durations=5",
] }

[tool.pixi.feature.typecheck.tasks]
typecheck = "pyright"

[tool.pixi.pypi-dependencies]
swmmanywhere-us = { path = ".", editable = true }

[tool.pixi.workspace]
channels = [ "conda-forge" ]
platforms = [ "linux-64", "osx-64", "osx-arm64", "win-64" ]

[tool.ruff]
target-version = "py311"
line-length = 100
exclude = [ ".pixi", "__pycache__" ]
lint.select = [ "ALL" ]
# Adopted from https://github.com/python-attrs/attrs/blob/main/pyproject.toml
lint.ignore = [
  "ANN",     # pyright is better at this
  "ARG",     # unused arguments are normal when implementing interfaces
  "B905",    # zip without strict is fine in Python 3.11+
  "COM",     # ruff format takes care of our commas
  "D",       # we prefer our own docstring style
  "E501",    # leave line-length enforcement to ruff format
  "FBT",     # we don't hate bool args around here
  "ISC001",  # conflicts with ruff format
  "N",       # we need more naming freedom
  "PLC0415", # sometimes, imports have to live elsewhere
  "PLR0913", # yes, many arguments, but most have defaults
  "PLR2004", # numbers are sometimes fine
  "TC001",   # first-party typing-only imports are cheap, keep simple for docs
  "TC003",   # stdlib typing-only imports are cheap, keep simple for docs
  "TRY301",  # raising within try/except is fine for us
]
lint.per-file-ignores."docs/*.py" = [
  "A001",   # shadowing builtins like `license` is fine for file paths
  "INP001", # no need for init files in docs
]
lint.per-file-ignores."docs/*.{py,ipynb}" = [
  # notebook-generated files
  "B018",
  "D100",
  # notebook cells naturally introduce imports mid-file
  "E402",
  # we have commented-out code in notebook headers
  "ERA001",
]
lint.per-file-ignores."tests/*.py" = [
  "B015",    # pointless comparison in tests aren't pointless
  "B017",    # pytest.raises(Exception) is fine
  "B018",    # pointless expressions in tests aren't pointless
  "BLE001",  # Blind excepts are fine in tests
  "DTZ",     # datetime best practices don't matter in tests
  "EM",      # no need for exception msg hygiene in tests
  "INP001",  # no need for init files in tests
  "PLR0124", # pointless comparison in tests aren't pointless
  "PT011",   # broad is fine
  "PT012",   # sometimes we need more than a single stmt
  "RUF012",  # we don't do ClassVar annotations in tests
  "S",       # security concerns don't matter in tests
  "SIM201",  # sometimes we need to check `not ==`
  "SIM202",  # sometimes we need to check `not ==`
  "SIM300",  # Yoda rocks in asserts
  "TRY",     # exception best practices don't matter in tests
]
lint.extend-safe-fixes = [
  # module level imports
  "E402",
  # break down assert
  "PT018",
  # absolute imports
  "TID252",
]
lint.isort.known-first-party = [
  "swmmanywhere_us",
]
lint.isort.required-imports = [ "from __future__ import annotations" ]
lint.pydocstyle.convention = "google"

[tool.codespell]
ignore-words-list = "PERVIOUS,gage,gages,Carrer,anc,pervious"
skip = "*.inp,*.lock,.pixi/*,*.ipynb"

[tool.pyproject-fmt]
expand_tables = [ "tool.git-cliff", "tool.pixi" ]

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "strict"
include = [ "src" ]
ignore = [
  "docs/*.py",
  "docs/notebooks/*.ipynb",
  "docs/notebooks/*.py",
  "tests/*.py",
]
# Third-party libs in scientific Python often lack complete stubs
reportMissingTypeStubs = false
reportUnknownArgumentType = false
reportUnknownLambdaType = false
reportUnknownMemberType = false
reportUnknownParameterType = false
reportUnknownVariableType = false

[tool.pytest]
ini_options.testpaths = [
  "tests",
]
ini_options.addopts = "-v --doctest-modules --ignore=src/swmmanywhere_us/logging.py"
ini_options.markers = [
  "downloads: mark a test as requiring downloads",
]
ini_options.doctest_optionflags = "NORMALIZE_WHITESPACE IGNORE_EXCEPTION_DETAIL NUMBER"

[tool.coverage]
run.branch = true
run.source_pkgs = [
  "swmmanywhere_us",
]
paths.source = [ "src", "*/site-packages" ]
report.exclude_lines = [
  "if TYPE_CHECKING:",
]
report.ignore_errors = true
report.omit = [
  "**/__init__.py",
]

[tool.git-cliff.changelog]
header = """
# Changelog

All notable changes to this project will be documented in this file.
The format is based on [Keep a Changelog](https://keepachangelog.com/en/1.1.0/),
and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0.html).

"""
body = '''{%- macro remote_url() -%}
  https://github.com/{{ remote.github.owner }}/{{ remote.github.repo }}
{%- endmacro -%}

{% if version -%}
## [{{ version | trim_start_matches(pat="v") }}] - {{ timestamp | date(format="%Y-%m-%d") }}
{% else -%}
## [Unreleased]
{% endif -%}

{% for group, commits in commits | group_by(attribute="group") %}
### {{ group }}
{% for commit in commits %}
- {% if commit.scope %}**{{ commit.scope }}**: {% endif %}\
{{ commit.message | split(pat="\\n") | first | upper_first | trim }}\
{% if commit.breaking %} (**breaking**){% endif %}\
{% if commit.remote.username and commit.remote.username != "github-actions[bot]" %} by @{{ commit.remote.username }}{% endif %}\
{% if commit.remote.pr_number %} in \
[#{{ commit.remote.pr_number }}]({{ self::remote_url() }}/pull/{{ commit.remote.pr_number }})\
{% endif %}
{%- endfor %}
{% endfor -%}

{%- if github.contributors | filter(attribute="is_first_time", value=true) | length != 0 %}
### New Contributors
{% for contributor in github.contributors | filter(attribute="is_first_time", value=true) %}
{%- if contributor.username and contributor.username != "github-actions[bot]" %}
- @{{ contributor.username }} made their first contribution\
{% if contributor.pr_number %} in \
[#{{ contributor.pr_number }}]({{ self::remote_url() }}/pull/{{ contributor.pr_number }})\
{% endif %}
{%- endif -%}
{%- endfor %}
{% endif %}
'''
footer = '''{%- macro remote_url() -%}
  https://github.com/{{ remote.github.owner }}/{{ remote.github.repo }}
{%- endmacro -%}

{% for release in releases -%}
{% if release.version -%}
{% if release.previous.version -%}
[{{ release.version | trim_start_matches(pat="v") }}]: \
<{{ self::remote_url() }}/compare/{{ release.previous.version }}...{{ release.version }}>
{% else -%}
[{{ release.version | trim_start_matches(pat="v") }}]: \
<{{ self::remote_url() }}/releases/tag/{{ release.version }}>
{% endif -%}
{% else -%}
{% if release.previous.version -%}
[unreleased]: <{{ self::remote_url() }}/compare/{{ release.previous.version }}...HEAD>
{% endif -%}
{% endif -%}
{% endfor %}'''

[tool.git-cliff.git]
conventional_commits = true
filter_unconventional = true
split_commits = false
commit_parsers = [
  { message = "^feat", group = "Added" },
  { message = "^fix", group = "Fixed" },
  { message = "^perf", group = "Changed" },
  { message = "^refactor", group = "Changed" },
  { message = "^revert", group = "Fixed" },
  { message = "^style", group = "Changed" },
  { message = "^docs", skip = true },
  { message = "^test", skip = true },
  { message = "^chore", skip = true },
  { message = "^ci", skip = true },
  { message = "^build", skip = true },
  { message = "\\[skip ci\\]", skip = true },
  { message = "^Merge", skip = true },
]
protect_breaking_commits = true
filter_commits = false
tag_pattern = "v[0-9].*"
topo_order = false
sort_commits = "newest"

[tool.jupytext]
formats = "ipynb,py:percent"
notebook_metadata_filter = "kernelspec,jupytext"
cell_metadata_filter = "-all"
